Closed Bug 1420192 Opened 7 years ago Closed 7 years ago

Youtube and twitch.com live videos don't work when auto-play is off

Categories

(Firefox for Android Graveyard :: Audio/Video, defect)

Firefox 59
ARM
Android
defect
Not set
normal

Tracking

(firefox59 verified)

RESOLVED FIXED
Firefox 59
Tracking Status
firefox59 --- verified

People

(Reporter: ohorvath, Assigned: alwu)

References

Details

Attachments

(2 files)

Devices: Huawei P9 Lite (Android 6.0) Huawei Honor 8 (Android 7.0) Lenovo Yoga Tablet 2 (Android 4.4.2) Build: Nightly 59.0a1 (2017-11-23); Steps to reproduce: 1. Go to Settings>Advanced and turn off Media auto-play. 2. Open a youtube video and tap play. 3. Go to twitch.tv and open a live video and tap play. Expected result: The videos should start playing. Actual result: The videos can't be played when auto-play is off. Note: reproducing with any youtube video live or recorded. Other video websites as: vimeo, nytimes, or adultswim.com (live stream) are working.
Alaster, could you please help check this one? Thanks.
Flags: needinfo?(alwu)
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Comment on attachment 8931604 [details] Bug 1420192 - when disable autoplay, allow script calls play() once user triggered load() or seek(). https://reviewboard.mozilla.org/r/202744/#review208068
Attachment #8931604 - Flags: review?(jwwang) → review+
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/413ed7bee307 when disable autoplay, allow script calls play() once user triggered load() or seek(). r=jwwang
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 59
Attached file log.txt
Tested this on a Samsung Galaxy Tab S3 (Android 7.0) & Nexus 6P (Android 8.0) everything works fine on YouTube but the issue is still reproducible for twitch.tv, reopening the issue.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
The issue with twitch.tv is reproducing on Beta 58 too, so it's not related to the HLS feature. There's also Bug 1377891 that seems to describe the same behavior. Will keep that one open and I'll mark this one as fixed.
Status: REOPENED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Blocks: 1377891
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: